--- a/css/form.css
+++ b/css/form.css
@@ -74,9 +74,68 @@ div.form .col
 	margin-right: 2%;
 }
 
+div.form .col_add
+{
+	width: 15%;
+	display: inline;
+	float: left;
+	margin-top: 4%;
+        margin-bottom: 7%;
+        margin-left: 5px;
+}
+
+div.form .cc { width: 19%;}
+
+
+div.form .ccadd_col
+{
+	margin: 5px 0; height:50px; width:600px
+}
+
+div.form .cc_add
+{
+	width:24%;
+        display: inline;
+	float: left;
+	margin-right: 28px;
+        
+}
+
+div.form .offer
+{
+	width:48%;
+        display: inline;
+	float: left;
+	margin-right: 5px;
+        margin-bottom: 15px;
+        
+}
+div.form .size-5{width: 5%;}
+div.form .size-10{width: 10%;margin-right: 35px;}
+div.form .size-13{width:13%; margin-right:0px; margin-left: 1%;}
+div.form .size-14{width: 14%;}
+div.form .size-19{width: 19%;}
+div.form .size-100{width: 100%;}
+
+div.form .col_field
+{
+	display: inline;
+	float: left;
+	margin-right: 2%;
+}
+
+
 div.col_left{float:left;}
 
 div.col_right{float: right;}
+
+div.form .first_col{margin-bottom:10px; width:950px}
+
+div.form .second_col{margin: 5px 0; height:130px; width:950px}
+
+div.form .third_col{float: left; width: 600px;}
+
+div.form .four_col{float: right; width: 265px;}
 
 div.form .hint
 {
