--- a/css/form.css
+++ b/css/form.css
@@ -115,6 +115,8 @@ div.form .size-10{width: 10%;margin-right: 35px;}
 div.form .size-13{width:13%; margin-right:0px; margin-left: 1%;}
 div.form .size-14{width: 14%;}
 div.form .size-19{width: 19%;}
+div.form .size-24{width: 24%;}
+div.form .size-50{width: 50%;}
 div.form .size-100{width: 100%;}
 
 div.form .col_field
